re PR c++/10179 (alignment attributes are not inherited correctly with empty classes)

PR c++/10179
        * class.c (layout_empty_base): Take rli parameter, update
        rli->record_align if empty base has user-specified alignment.
        (build_base_field): Pass rli to it.

From-SVN: r128871